mi aporte de python

--- a/ej.ipynb
+++ b/ej.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -67,15 +67,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "emilio tiene 19 años\n",
+      "joaquin tiene 20 años\n"
+     ]
+    }
+   ],
    "source": [
     "nombre = [\"emilio\", \"joaquin\"]\n",
     "edades = [19, 20]\n",
     "\n",
-    "for nombre, edades in zio(nombre, edades):\n",
-    "    print(nombre, edades)"
+    "for nombre, edades in zip(nombre, edades):\n",
+    "    print(f\"{nombre} tiene {edades} años\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "verdadero=True\n",
+    "mi_primer_nom=\"Emilio\"\n",
+    "mis_apellidos=\"Ortiz Malich\"\n",
+    "edad=19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "soy Emilio Ortiz Malich y tengo 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(verdadero)\n",
+    "print(f\"soy {mi_primer_nom} {mis_apellidos} y tengo {edad}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola mundo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hola mundo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boleto = 100\n",
+    "if boleto < 100:\n",
+    "    print(\"no alcanza\")\n",
+    "elif boleto == 100:\n",
+    "    print(\"justo alcanza\")\n",
+    "else:\n",
+    "    print(\"si alcanza\")"
    ]
   }
  ],
