--- a/ej.ipynb
+++ b/ej.ipynb
@@ -168,6 +168,43 @@
     "else:\n",
     "    print(\"si alcanza\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Funciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumar (a,b):\n",
+    "    return a+b\n",
+    "    resultado=sumar(6+7)\n",
+    "\n",
+    "print(resultado)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Funcion lamba "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multiplodos = lambda x : x %2 ==0\n",
+    "##es par"
+   ]
   }
  ],
  "metadata": {
