--- a/ej.ipynb
+++ b/ej.ipynb
@@ -205,11 +205,43 @@
     "multiplodos = lambda x : x %2 ==0\n",
     "##es par"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Algunas Funciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_ramdon=[]\n",
+    "\n",
+    "name=input(\"ingrese nombre: \")\n",
+    "edad=int(input(\"ingrese su edad: \"))\n",
+    "\n",
+    "if edad > 18:\n",
+    "    print(f\"{name} es menor de edad porque tiene {edad}\")\n",
+    "    else:\n",
+    "        \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -223,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
