--- a/ej.ipynb
+++ b/ej.ipynb
@@ -142,18 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m boleto =(\u001b[38;5;28minput\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mingrese la cantidad que posee para pagar el boleto: \u001b[39m\u001b[33m\"\u001b[39m))\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mboleto\u001b[49m\u001b[43m \u001b[49m\u001b[43m<\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m100\u001b[39;49m:\n\u001b[32m      4\u001b[39m     \u001b[38;5;66;03m#print(\"no alcanza\")\u001b[39;00m\n\u001b[32m      5\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m boleto == \u001b[32m100\u001b[39m:\n",
-      "\u001b[31mTypeError\u001b[39m: '<' not supported between instances of 'str' and 'int'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "justo alcanza\n"
      ]
     }
    ],
