ejercicio en funcion

--- a/ej.ipynb
+++ b/ej.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,18 @@
    ],
    "source": [
     "num = 12 \n",
-    "print(num)"
+    "print(num)\n",
+    "a= 1\n",
+    "b= 2\n",
+    "def ejercicio(a,b):\n",
+    "    suma=a+b\n",
+    "    resta=a-b\n",
+    "    multi=a*b\n",
+    "\n",
+    "\n",
+    "    return suma, resta, multi \n",
+    "\n",
+    "ejercicio()"
    ]
   },
   {
